filter done according to status

--- a/src/Styles/MovieItem.css
+++ b/src/Styles/MovieItem.css
@@ -9,6 +9,7 @@
 
 .card-img-top {
   width: 100%;
+
   height: auto;
   border-bottom: 1px solid #ddd;
   transition: transform 0.2s ease-in-out;
@@ -29,13 +30,20 @@
 }
 
 .card-text {
-  font-size: 0.875rem;
-  color: #555;
-
-  overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 3; /* Adjust the number of lines to clamp */
+  transition: -webkit-line-clamp 0.5s ease; /* Smooth transition */
+}
+.card-text.expanded {
+  -webkit-line-clamp: unset;
+}
+
+.read-more-button {
+  cursor: pointer;
+  color: #3498db; /* Adjust the color as needed */
+  text-decoration: underline;
 }
 
 .status-select {
