--- a/src/Styles/MoviesGrid.css
+++ b/src/Styles/MoviesGrid.css
@@ -3,10 +3,34 @@
   margin: 0 auto;
   padding: 20px;
 }
+
 .movie-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 15px;
+  grid-gap: 10px;
   justify-content: center;
   align-items: center;
+}
+
+button {
+  background-color: #3498db;
+  color: #fff;
+  padding: 10px 15px;
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #2980b9;
+}
+
+button:focus {
+  outline: none;
+}
+
+button:active {
+  transform: scale(0.98);
 }
