--- a/src/Styles/MovieItem.css
+++ b/src/Styles/MovieItem.css
@@ -33,8 +33,8 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  -webkit-line-clamp: 3; /* Adjust the number of lines to clamp */
-  transition: -webkit-line-clamp 0.5s ease; /* Smooth transition */
+  -webkit-line-clamp: 3;
+  transition: -webkit-line-clamp 0.5s ease;
 }
 .card-text.expanded {
   -webkit-line-clamp: unset;
@@ -42,7 +42,7 @@
 
 .read-more-button {
   cursor: pointer;
-  color: #3498db; /* Adjust the color as needed */
+  color: #3498db;
   text-decoration: underline;
 }
 
